--- a/demo/app/demos/badge/demo.component.html
+++ b/demo/app/demos/badge/demo.component.html
@@ -1,17 +1,17 @@
-<h3>Default badge</h3>
-<vcl-badge>default</vcl-badge>
+<div class="vclGutter-2 vclPB-2">
+  <vcl-badge>default</vcl-badge>
+  <vcl-badge type="primary">primary</vcl-badge>
+  <vcl-badge type="success">success</vcl-badge>
+  <vcl-badge type="info">info</vcl-badge>
+  <vcl-badge type="warning">warning</vcl-badge>
+  <vcl-badge type="error">error</vcl-badge>
+</div>
 
-<h3>Primary badge</h3>
-<vcl-badge type="primary">primary</vcl-badge>
-
-<h3>Success badge</h3>
-<vcl-badge type="success">success</vcl-badge>
-
-<h3>Info badge</h3>
-<vcl-badge type="info">info</vcl-badge>
-
-<h3>Warning badge</h3>
-<vcl-badge type="warning">warning</vcl-badge>
-
-<h3>Error badge</h3>
-<vcl-badge type="error">error</vcl-badge>
+<div class="vclGutter-2">
+  <vcl-badge vclRounded>default</vcl-badge>
+  <vcl-badge vclRounded type="primary">primary</vcl-badge>
+  <vcl-badge vclRounded type="success">success</vcl-badge>
+  <vcl-badge vclRounded type="info">info</vcl-badge>
+  <vcl-badge vclRounded type="warning">warning</vcl-badge>
+  <vcl-badge vclRounded type="error">error</vcl-badge>
+</div>
