--- a/demo/app/demos/busy-indicator/demo.component.html
+++ b/demo/app/demos/busy-indicator/demo.component.html
@@ -23,7 +23,7 @@
 <br><br>
 
 <h3>Busy container</h3>
-<div [vcl-busy-indicator-cover]="isBusy" class="vclContainer vclLayoutHorizontal vclLayoutCenterJustified" style="height:15em">
+<div [vcl-busy-indicator-cover]="isBusy" class="vclContainer vclHor vclJustifyCenter" style="height:15em">
   <vcl-busy-indicator></vcl-busy-indicator>
   <button vcl-button (click)="makeBusy()">Make container busy for 3 secs</button>
 </div>
