--- a/demo/app/demos/layer/bar.component.html
+++ b/demo/app/demos/layer/bar.component.html
@@ -1,5 +1,5 @@
-<div class="vclPanel vclPanelDialog vclNoMargin">
-  <div class="vclPanelHeader vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter">
+<div class="vclPanel vclPanelDialog vclM-0">
+  <div class="vclPanelHeader vclNoBg vclHor vclJustifyBetween vclCenter">
     <h3 class="vclPanelTitle">{{title}}</h3>
     <button vcl-square-button class="vclTransparent" (click)="close()">
       <vcl-icon icon="fas:times"></vcl-icon>
@@ -10,7 +10,7 @@
       bar layer content
     </p>
   </div>
-  <div class="vclPanelFooter vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter">
+  <div class="vclPanelFooter vclNoBg vclHor vclJustifyBetween vclCenter">
     <div></div>
     <div class="vclLooseButtonGroup">
       <button vcl-button class="vclTransparent vclOutline" (click)="close()">Close Layer</button>
