--- a/demo/app/demos/tooltip/demo.component.html
+++ b/demo/app/demos/tooltip/demo.component.html
@@ -25,7 +25,7 @@
   <div [vclTooltip]="tt" style="background-color:#A4A4A4;flex:1">
     <p>Tooltip with rich content</p>
     <vcl-tooltip #tt="vclTooltip">
-      <div class="vclLayoutHorizontal vclLayoutCenter">
+      <div class="vclHor vclCenter">
         <img src="http://lorempixel.com/50/50/cats/" />
         <span class="vclGutterMarginLR">Tooltip with rich content </span>
       </div>
