--- a/demo/app/demos/tour/demo.component.html
+++ b/demo/app/demos/tour/demo.component.html
@@ -1,7 +1,7 @@
 <section class="vlcContentArea">
     <vcl-tour-overlay></vcl-tour-overlay>
     
-    <div class="vclLayoutVertical">
+    <div class="vclVer">
         <div>
             <button type="button" class="vclButton" (click)="startTour()">
                 <div class="vclIcogram">
