--- a/lib/ng-vcl/src/calendar/views/minutes.component.html
+++ b/lib/ng-vcl/src/calendar/views/minutes.component.html
@@ -1,6 +1,6 @@
 <div class="vclDGRow">
   <div class="vclDGCell">
-    <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
+    <div class="vclToolbar vclFlex vclHor vclJustifyBetween vclCenter" role="menubar" aria-level="1">
       <div class="vclButtonDim"></div>
       <button vcl-button class="vclTransparent vclCalHeaderLabel" (click)="onLabelClick()">
         Minutes
