--- a/lib/ng-vcl/src/calendar/views/year.component.html
+++ b/lib/ng-vcl/src/calendar/views/year.component.html
@@ -1,7 +1,7 @@
 
 <div class="vclDGRow">
   <div class="vclDGCell vclToolbar">
-    <div class="vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar">
+    <div class="vclFlex vclHor vclJustifyBetween vclCenter" role="menubar">
       <button vcl-square-button class="vclTransparent" type="button" (click)="onGoToPrevYear()">
         <vcl-icon icon="vcl:arrow-left"></vcl-icon>
       </button>
