--- a/lib/ng-vcl/src/date-picker/time-picker.component.html
+++ b/lib/ng-vcl/src/date-picker/time-picker.component.html
@@ -1,9 +1,9 @@
-<div class="vclLayoutHorizontal">
+<div class="vclHor">
   <div *ngIf="displayHours" class="vclDatePicker" role="listbox" aria-multiselectable="false" style="width: 18em;">
     <div *ngIf="displayHours24" class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput">
       <div class="vclDGRow">
         <div class="vclDGCell">
-          <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
+          <div class="vclToolbar vclFlex vclHor vclJustifyBetween vclCenter" role="menubar" aria-level="1">
             <div class="vclButtonDim"></div>
             <div class="vclCalHeaderLabel">Hour</div>
             <button type="button" class="vclButton vclTransparent vclSquare" (click)="onSwitch24h()">12h</button>
@@ -19,7 +19,7 @@
       
       <div class="vclDGRow">
         <div class="vclDGCell">
-          <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
+          <div class="vclToolbar vclFlex vclHor vclJustifyBetween vclCenter" role="menubar" aria-level="1">
             <div class="vclButtonDim"></div>
             <div class="vclCalHeaderLabel">AM</div>
             <button type="button" class="vclButton vclTransparent vclSquare" (click)="onSwitch24h()">24h</button>
@@ -36,7 +36,7 @@
 
       <div class="vclDGRow">
         <div class="vclDGCell">
-          <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
+          <div class="vclToolbar vclFlex vclHor vclJustifyBetween vclCenter" role="menubar" aria-level="1">
             <div class="vclButtonDim"></div>
             <div class="vclCalHeaderLabel">PM</div>
             <div class="vclButtonDim"></div>
@@ -58,7 +58,7 @@
     <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput">
         <div class="vclDGRow">
           <div class="vclDGCell">
-            <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
+            <div class="vclToolbar vclFlex vclHor vclJustifyBetween vclCenter" role="menubar" aria-level="1">
               <div class="vclButtonDim"></div>
               <div class="vclCalHeaderLabel">Minute</div>
               <div class="vclButtonDim"></div>
@@ -76,7 +76,7 @@
     <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput">
       <div class="vclDGRow">
         <div class="vclDGCell">
-          <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
+          <div class="vclToolbar vclFlex vclHor vclJustifyBetween vclCenter" role="menubar" aria-level="1">
             <div class="vclButtonDim"></div>
             <div class="vclCalHeaderLabel">Second</div>
             <div class="vclButtonDim"></div>
