--- a/lib/ng-vcl/src/navigation/navigation.component.html
+++ b/lib/ng-vcl/src/navigation/navigation.component.html
@@ -1,3 +1,3 @@
-<div [class.vclLayoutHorizontal]="layout === 'horizontal'">
+<div [class.vclHor]="layout === 'horizontal'">
   <ng-content></ng-content>
 </div>
