--- a/lib/ng-vcl/src/tour/tour-overlay.component.html
+++ b/lib/ng-vcl/src/tour/tour-overlay.component.html
@@ -1,5 +1,5 @@
 <div 
   class="vclTourOverlay" 
-  [class.vclLayoutHidden]="!tour.showOverlay"
+  [class.vclHide]="!tour.showOverlay"
   (click)="tour.onOverlayClick()">
 </div>
