--- a/demo/app/demos/layer/nag.component.html
+++ b/demo/app/demos/layer/nag.component.html
@@ -1,10 +1,10 @@
-<div class="vclLayoutWidth vclLayoutHorizontal vclLayoutCenter">
-  <div class="vclLayoutFlex vclLayoutThree">
+<div class="vclLayoutWidth vclHor vclCenter">
+  <div class="vclFlex vclLayoutThree">
     Cookies and similar technologies help us deliver our services. By using our services,
     you agree to our use of cookies. You can find further information about the
     use of Cookies on this website in our <a href="#">privacy policy</a>.
   </div>
-  <div class="vclLayoutHorizontal vclLayoutCenterJustified vclLayoutCenter vclGutterMarginLR">
+  <div class="vclHor vclJustifyCenter vclCenter vclGutterMarginLR">
     <div class="vclLooseButtonGroup">
       <button *ngIf="layer.data.allowDecline" vcl-button type="button" (click)="decline()">Decline</button>
       <button vcl-button type="button" class="vclEmphasized" (click)="accept()">Accept</button>
