--- a/lib/ng-vcl/src/alert/alert.component.html
+++ b/lib/ng-vcl/src/alert/alert.component.html
@@ -1,5 +1,5 @@
-<div class="vclPanel vclPanelDialog vclNoMargin" [ngClass]="alertClass" style="min-width: 25em" role="dialog">
-  <div *ngIf="alert.title" class="vclPanelHeader vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter">
+<div class="vclPanel vclPanelDialog vclM-0" [ngClass]="alertClass" style="min-width: 25em" role="dialog">
+  <div *ngIf="alert.title" class="vclPanelHeader vclNoBg vclHor vclJustifyBetween vclCenter">
     <h3 class="vclPanelTitle">{{alert.title}}</h3>
     <button *ngIf="alert.showCloseButton" vcl-square-button class="vclTransparent" (click)="close()">
       <vcl-icon icon="fas:times"></vcl-icon>
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div class="vclPanelFooter vclNoBg vclLayoutHorizontal vclLayoutJustified vclLayoutCenter">
+  <div class="vclPanelFooter vclNoBg vclHor vclJustifyBetween vclCenter">
     <div></div>
     <div class="vclLooseButtonGroup">
 
