--- a/lib/ng-vcl/src/calendar/views/years.component.html
+++ b/lib/ng-vcl/src/calendar/views/years.component.html
@@ -1,6 +1,6 @@
 <div class="vclDGRow">
   <div class="vclDGCell vclToolbar">
-    <div class="vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar">
+    <div class="vclFlex vclHor vclJustifyBetween vclCenter" role="menubar">
       <button vcl-square-button class="vclTransparent" type="button" (click)="onGoToPrevYears()">
         <vcl-icon icon="vcl:arrow-left"></vcl-icon>
       </button>
