--- a/lib/ng-vcl/src/date-picker/date-picker.component.html
+++ b/lib/ng-vcl/src/date-picker/date-picker.component.html
@@ -1,8 +1,8 @@
-<div class="vclLayoutHorizontal">
+<div class="vclHor">
   <div class="vclDataGrid vclDGVAlignMiddle vclDGAlignCentered vclCalendar vclCalInput" style="min-width: 18em;" *ngIf="displayDate">
     <div class="vclDGRow">
       <div class="vclDGCell vclToolbar">
-        <div class="vclLayoutFlex vclLayoutHorizontal vclLayoutJustified vclLayoutCenter" role="menubar" aria-level="1">
+        <div class="vclFlex vclHor vclJustifyBetween vclCenter" role="menubar" aria-level="1">
           <button vcl-square-button type="button" class="vclTransparent" [disabled]="disabled" (click)="prevMonth()" aria-label="previous">
             <vcl-icon icon="vcl:arrow-left"></vcl-icon>
           </button>              
@@ -49,13 +49,13 @@
 
         <div *ngIf="displayJumpSelected || displayJumpToday" class="vclDGRow">
           <div class="vclDGCell">
-            <div class="vclToolbar vclLayoutFlex vclLayoutHorizontal vclLayoutJustified" role="menubar" aria-level="2">
-              <button *ngIf="displayJumpToday" type="button" title="go to today" class="vclButton vclTransparent vclLayoutFlex" [disabled]="disabled" (click)="gotoToday()">
+            <div class="vclToolbar vclFlex vclHor vclJustifyBetween" role="menubar" aria-level="2">
+              <button *ngIf="displayJumpToday" type="button" title="go to today" class="vclButton vclTransparent vclFlex" [disabled]="disabled" (click)="gotoToday()">
                 <div class=" vclIcogram">
                   <span class="vclText ">go to today</span>
                 </div>
               </button>
-              <button *ngIf="displayJumpSelected" type="button" title="go to selected" class="vclButton vclTransparent vclLayoutFlex" [disabled]="disabled" (click)="gotoSelected()">
+              <button *ngIf="displayJumpSelected" type="button" title="go to selected" class="vclButton vclTransparent vclFlex" [disabled]="disabled" (click)="gotoSelected()">
                 <div class=" vclIcogram">
                   <span class="vclText ">go to selected</span>
                 </div>
