--- a/demo/app/demos/datepicker/demo.component.html
+++ b/demo/app/demos/datepicker/demo.component.html
@@ -1,6 +1,5 @@
 <h3>Basic datepicker</h3>
-<vcl-datepicker [value]="date" (valueChange)="onChange($event)">
-</vcl-datepicker>
+<vcl-datepicker [value]="date" (valueChange)="onChange($event)"></vcl-datepicker>
 
 <h3>Month Picker</h3>
 <vcl-datepicker [value]="date" (valueChange)="onChange($event)" pick="month"></vcl-datepicker>
