chore(demo): minor fixes

--- a/demo/app/components/app/app.component.html
+++ b/demo/app/components/app/app.component.html
@@ -5,11 +5,11 @@
       </button>
       <div role="banner">
         <a href="#" class="row center">
-          <img class="responsive-image logo" role="presentation" src="https://cdn.jsdelivr.net/gh/ng-vcl/ng-vcl/gfx/angular_vcl_logo_square.png">
+          <img class="responsive-image logo" role="presentation" src="https://cdn.jsdelivr.net/gh/vcl/ng-vcl/gfx/angular_vcl_logo_square.png">
           <h1 *ngIf="!xsmall" class="app-name">Angular VCL Demo Browser (v{{version}}<span *ngIf="gitBranch"> {{gitBranch}}</span>)</h1>
         </a>
       </div>
-      <div class="github"><a href="https://github.com/ng-vcl/ng-vcl" target="_blank" title="to Github">
+      <div class="github"><a href="https://github.com/vcl/ng-vcl" target="_blank" title="to Github">
         <span class="icon fab fa-github fa-3x"></span> </a>
       </div>
     </header>
