fix(popover): fix positioning

--- a/demo/styles.scss
+++ b/demo/styles.scss
@@ -1,6 +1,6 @@
 @use "~normalize.css" as normalize;
 @use '@angular/cdk/overlay-prebuilt.css';
-@use "~@vcl/vcl/vcl";
+@use "~@vcl/vcl";
 
 @use "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @use "~@fortawesome/fontawesome-free/scss/brands.scss" with (
