--- a/demo/app/demos/autocomplete/demo.component.html
+++ b/demo/app/demos/autocomplete/demo.component.html
@@ -12,27 +12,27 @@
   <vcl-select-list>
     <vcl-select-list-header>Europe</vcl-select-list-header>
     <vcl-select-list-item value="Greece">
-      <vcl-select-list-label>Greece</vcl-select-list-label>
-      <vcl-select-list-sublabel>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-select-list-sublabel>
+      Greece
+      <vcl-sub-label>A country in southeastern Europe with thousands of islands throughout the Aegean and Ionian seas</vcl-sub-label>
     </vcl-select-list-item>
     <vcl-select-list-item value="France">
-      <vcl-select-list-label>France</vcl-select-list-label>
+      France
     </vcl-select-list-item>
     <vcl-select-list-item value="Germany">
-      <vcl-select-list-label>Germany</vcl-select-list-label>
+      Germany
     </vcl-select-list-item>
     <vcl-select-list-item value="The United Kingdom">
-      <vcl-select-list-label>The United Kingdom of Great Britain and Northern Ireland</vcl-select-list-label>
+      The United Kingdom of Great Britain and Northern Ireland
     </vcl-select-list-item>
     <vcl-select-list-header>Asia</vcl-select-list-header>
     <vcl-select-list-item value="Japan">
-      <vcl-select-list-label>Japan</vcl-select-list-label>
+      Japan
     </vcl-select-list-item>
     <vcl-select-list-item value="China">
-      <vcl-select-list-label>China</vcl-select-list-label>
+      China
     </vcl-select-list-item>
     <vcl-select-list-item value="Thailand">
-      <vcl-select-list-label>Thailand</vcl-select-list-label>
+      Thailand
     </vcl-select-list-item>
   </vcl-select-list>
 </vcl-autocomplete>
