--- a/demo/app/demos/material-design-inputs/demo.component.html
+++ b/demo/app/demos/material-design-inputs/demo.component.html
@@ -61,20 +61,20 @@
     <vcl-select placeholder="Select two perks">
       <vcl-select-list formControlName="perks"  selectionMode="multiple">
         <vcl-select-list-item [value]="'snakeeater'">
-          <vcl-select-list-label>Snake Eater</vcl-select-list-label>
-          <vcl-select-list-sublabel>It gives you a 25% increase to your poison resistance.	</vcl-select-list-sublabel>
+          Snake Eater
+          <vcl-sub-label>It gives you a 25% increase to your poison resistance.	</vcl-sub-label>
         </vcl-select-list-item>
         <vcl-select-list-item [value]="'swiftlearner'">
-          <vcl-select-list-label>Swift Learner</vcl-select-list-label>
-          <vcl-select-list-sublabel>Swift Learner	Whenever you gain experience, you'll receive 5% more experience per level of the perk.</vcl-select-list-sublabel>
+          Swift Learner
+          <vcl-sub-label>Swift Learner	Whenever you gain experience, you'll receive 5% more experience per level of the perk.</vcl-sub-label>
         </vcl-select-list-item>
         <vcl-select-list-item [value]="'toughness'">
-          <vcl-select-list-label>Toughness</vcl-select-list-label>
-          <vcl-select-list-sublabel>It adds 10% to your general damage resistance per level.</vcl-select-list-sublabel>
+          Toughness
+          <vcl-sub-label>It adds 10% to your general damage resistance per level.</vcl-sub-label>
         </vcl-select-list-item>
         <vcl-select-list-item [value]="'explorer'">
-          <vcl-select-list-label>Explorer</vcl-select-list-label>
-          <vcl-select-list-sublabel>You'll get more random encounters with this perk.</vcl-select-list-sublabel>
+          Explorer
+          <vcl-sub-label>You'll get more random encounters with this perk.</vcl-sub-label>
         </vcl-select-list-item> 
       </vcl-select-list>
     </vcl-select>
