--- a/lib/ng-vcl/src/tab-nav/tab.component.html
+++ b/lib/ng-vcl/src/tab-nav/tab.component.html
@@ -1,4 +1,7 @@
-<ng-content select="vcl-tab-label"></ng-content>
+
+<span class="tab-label">
+  <ng-content select="vcl-tab-label, vclLabel, vcl-label"></ng-content>
+</span>
 
 <ng-template #contentTemplate>
   <ng-content></ng-content>
