--- a/demo/app/demos/tab-nav/demo.component.html
+++ b/demo/app/demos/tab-nav/demo.component.html
@@ -2,15 +2,15 @@
 
 <vcl-tab-nav >
   <vcl-tab>
-    <vcl-tab-label>Tab1</vcl-tab-label>
+    <vcl-label>Tab1</vcl-label>
     Content1
   </vcl-tab>
   <vcl-tab>
-      <vcl-tab-label>Tab2</vcl-tab-label>
+      <vcl-label>Tab2</vcl-label>
     Content2
   </vcl-tab>
   <vcl-tab [disabled]="true">
-    <vcl-tab-label>Tab3</vcl-tab-label>
+    <vcl-label>Tab3</vcl-label>
     Content3
   </vcl-tab>
 </vcl-tab-nav>
@@ -21,15 +21,15 @@
 
 <vcl-tab-nav layout="right" tabContentClass="vclSpan-70p" tabsClass="vclSpan-30p">
   <vcl-tab>
-    <vcl-tab-label>Tab1</vcl-tab-label>
+    <vcl-label>Tab1</vcl-label>
     Content1
   </vcl-tab>
   <vcl-tab>
-      <vcl-tab-label>Tab2</vcl-tab-label>
+      <vcl-label>Tab2</vcl-label>
     Content2
   </vcl-tab>
   <vcl-tab [disabled]="true">
-    <vcl-tab-label>Tab3</vcl-tab-label>
+    <vcl-label>Tab3</vcl-label>
     Content3
   </vcl-tab>
 </vcl-tab-nav>
@@ -40,15 +40,15 @@
 
 <vcl-tab-nav layout="left" tabContentClass="vclSpan-70p" tabsClass="vclSpan-30p">
   <vcl-tab>
-    <vcl-tab-label>Tab1</vcl-tab-label>
+    <vcl-label>Tab1</vcl-label>
     Content1
   </vcl-tab>
   <vcl-tab>
-      <vcl-tab-label>Tab2</vcl-tab-label>
+      <vcl-label>Tab2</vcl-label>
     Content2
   </vcl-tab>
   <vcl-tab [disabled]="true">
-    <vcl-tab-label>Tab3</vcl-tab-label>
+    <vcl-label>Tab3</vcl-label>
     Content3
   </vcl-tab>
 </vcl-tab-nav>
@@ -59,15 +59,15 @@
 
 <vcl-tab-nav borders=true>
   <vcl-tab>
-    <vcl-tab-label>Tab1</vcl-tab-label>
+    <vcl-label>Tab1</vcl-label>
     Content1
   </vcl-tab>
   <vcl-tab>
-      <vcl-tab-label>Tab2</vcl-tab-label>
+      <vcl-label>Tab2</vcl-label>
     Content2
   </vcl-tab>
   <vcl-tab [disabled]="true">
-    <vcl-tab-label>Tab3</vcl-tab-label>
+    <vcl-label>Tab3</vcl-label>
     Content3
   </vcl-tab>
 </vcl-tab-nav>
@@ -79,13 +79,13 @@
 
 <vcl-tab-nav [(selectedTabIndex)]="tabIndex">
   <vcl-tab>
-    <vcl-tab-label>Tab1</vcl-tab-label>
+    <vcl-label>Tab1</vcl-label>
   </vcl-tab>
   <vcl-tab>
-      <vcl-tab-label>Tab2</vcl-tab-label>
+      <vcl-label>Tab2</vcl-label>
   </vcl-tab>
   <vcl-tab [disabled]="true">
-    <vcl-tab-label>Tab3</vcl-tab-label>
+    <vcl-label>Tab3</vcl-label>
   </vcl-tab>
   Shared Content Tab: {{tabIndex}}
 </vcl-tab-nav>
@@ -95,12 +95,12 @@
 
 <vcl-tab-nav>
   <vcl-tab>
-    <vcl-tab-label>Tab1</vcl-tab-label>
+    <vcl-label>Tab1</vcl-label>
   </vcl-tab>
   <vcl-tab>
-      <vcl-tab-label>Tab2</vcl-tab-label>
+      <vcl-label>Tab2</vcl-label>
   </vcl-tab>
   <vcl-tab [disabled]="true">
-    <vcl-tab-label>Tab3</vcl-tab-label>
+    <vcl-label>Tab3</vcl-label>
   </vcl-tab>
 </vcl-tab-nav>
