fix(token-input): misc fixes

--- a/lib/ng-vcl/src/token/token-input.component.html
+++ b/lib/ng-vcl/src/token/token-input.component.html
@@ -10,4 +10,4 @@
     {{token.label}}
   </vcl-token>
 </div>
-<input vclInput (focus)="onInputFocus()" (blur)="onInputBlur()" class="flex">
+<input vclInput [disabled]="isDisabled" (focus)="onInputFocus()" (blur)="onInputBlur()" class="flex">
